<resources>
    <string name="app_name">ImageSearch</string>

    <string name="hello_world">Hello world!</string>
    <string name="image">Image</string>
    <string name="image_title">Image Title</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_image_detail">Full Image</string>
    <string name="image_size">Image Size</string>
    <string name="image_type">Image Type</string>
    <string name="image_color">Color Filter</string>
    <string name="site_filter">Site filter</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="advanced_filter">Advanced Filter</string>

    <string-array name="filter_colors">
        <item>any</item>
        <item>black</item>
        <item>blue</item>
        <item>brown</item>
        <item>gray</item>
        <item>green</item>
        <item>orange</item>
        <item>pink</item>
        <item>purple</item>
        <item>red</item>
        <item>teal</item>
        <item>white</item>
        <item>yellow</item>
    </string-array>

    <string-array name="filter_types">
        <item>any</item>
        <item>face</item>
        <item>photo</item>
        <item>clipart</item>
        <item>lineart</item>
    </string-array>

    <color name="light_grey">#33CCCC</color>

    <string-array name="filter_sizes">
        <item>any</item>
        <item>icon</item>
        <item>small</item>
        <item>medium</item>
        <item>large</item>
        <item>xlarge</item>
        <item>xxlarge </item>
        <item>huge</item>
    </string-array>

</resources>
